# assurances-audits-accountability

./: .gitignore  FIGURE-SPECIFICATIONS.md  FILENAME-CONVENTIONS.md  HOWTO-CREATE-DOCUMENT-TYPE.md  LICENSE  NAVIGATION.md  PERSONALIZATION-GUIDE.md  QUICKSTART.md  README.md  REPOSITORY-POLICY.md  architecture-knowledge-complex-refactor.md  complex.json  conceptual-architecture-knowledge-complex-refactor.md  doc-incose-paper-2026.html  doc-incose-paper-2026.md  field-survey-knowledge-complex-refactor.md  functional-architecture-knowledge-complex-refactor.md  incose-paper-2026.html  logical-architecture-knowledge-complex-refactor.md  ontology-base.md  physical-architecture-knowledge-complex-refactor.md  pyproject.toml  pytest.ini  requirements-trace-knowledge-complex-refactor.md  requirements.txt  robots.txt  validation-assessment-incose-paper.md
.claude/: CLAUDE.local.md  DOCUMENT-DEVELOPMENT-TRACKER.md  INCOSE-IS2026-REQUIREMENTS-CACHE.md  LITERATURE-REVIEW.md  Submission Metadata.md  claude.md  doc-literature-review-incose-paper.md  latex_rules.tex  settings.local.json
.github/: actions.md
.obsidian/: community-plugins.json  graph.json  workspace.json
00_vertices/: README.md  alpha.md  b0-root.md  beta.md  branch-review-design-refactor.md  delta.md  doc-architecture-incose-paper.md  doc-impl-plan-physical-architecture-refactor.md  doc-incose-paper-2026.md  doc-literature-review-incose-paper.md  function-build.md  function-deploy.md  function-test.md  gamma.md  guidance-for-actor.md  guidance-for-architecture.md  guidance-for-assurance-audits.md  guidance-for-background-section.md  guidance-for-branch-review.md  guidance-for-field-survey.md  guidance-for-guidance.md  guidance-for-implementation-plan.md  guidance-for-incose-literature-review.md  guidance-for-incose-paper-section.md  guidance-for-incose-paper.md  guidance-for-introduction-section.md  guidance-for-learning-module.md  guidance-for-lifecycle.md  guidance-for-novel-contributions.md  guidance-for-ontology.md  guidance-for-persona.md  guidance-for-physical-architecture.md  guidance-for-program-memo.md  guidance-for-program-plan.md  guidance-for-protocol.md  guidance-for-repository-policy.md  guidance-for-skill.md  learning-module-assurance-audits.md  learning-module-composing-typed-simplicial-complexes.md  learning-module-document-composition.md  (+89 more)
01_edges/: README.md  accountable-alice-deploy.md  accountable-alice-monitor.md  accountable-dana-build.md  advances-assurance-audits-assurance-learner.md  advances-composing-typed-simplicial-complexes-compositional-learner.md  advances-document-composition-document-architect.md  advances-organizational-topology-chief-engineer.md  advances-reference-reuse-document-architect.md  advances-resource-management-management-architect.md  advances-simplicial-complex-fundamentals-foundational-learner.md  advances-team-coordination-coordination-architect.md  advances-typed-simplicial-complexes-intermediate-learner.md  advances-verification-validation-verification-learner.md  alpha-beta.md  alpha-delta.md  alpha-gamma.md  assigned-developer-build-r.md  assigned-senior-developer-build-a.md  assigned-sre-deploy-r.md  assigned-sre-monitor-r.md  assigned-tech-lead-deploy-a.md  assigned-tech-lead-monitor-a.md  b1-couples-SG-root.md  b1-self-validation.md  beta-delta.md  beta-gamma.md  cites-incose-paper-2026:lifecycle-incose.md  cites-incose-paper-2026:novel-contributions-incose.md  cites-incose-paper-2026_architecture-incose.md  cites-incose-paper-2026_literature-review-incose.md  compilation-system_prompt-compiled:system_prompt-reference.md  consumes-build-source-code.md  coupling-architecture.md  (+258 more)
(+694 files in other folders)
