[project]
name = "aaa-docware"
version = "1.0.0"
description = "Typed simplicial complex framework for document verification, validation, and assurance"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Michael Zargham" }
]
keywords = ["systems-engineering", "verification", "validation", "assurance", "simplicial-complex", "documentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0.1",
    "matplotlib>=3.8.0",
    "networkx>=3.2",
    "numpy>=1.26.0",
    "plotly>=5.18.0",
    "scipy>=1.12.0",
    "click>=8.1.0",
]

[project.scripts]
aaa = "aaa.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/BlockScience/assurances-audits-accountability"
Documentation = "https://github.com/BlockScience/assurances-audits-accountability#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aaa"]

# Include templates in the package
[tool.hatch.build.targets.wheel.sources]
"src" = ""

# Ensure templates are included as package data
[tool.hatch.build.targets.sdist]
include = [
    "src/aaa/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
